--- a/src/index.css
+++ b/src/index.css
@@ -266,6 +266,57 @@ html {
   cursor: pointer;
 }
 
+/* Accordian */
+.grid-view .left .accordian{
+  font-size: 12px;
+}
+.grid-view .left .accordian .items{
+  height: 60px;
+}
+.grid-view .left .accordian .items .flex{
+  display: flex;
+  justify-content: space-between;
+}
+.grid-view .left .accordian .items .flex .elem1{
+  display: flex;
+  gap: 7px;
+  align-items: center;
+}
+
+.grid-view .left .accordian .items .flex .elem1 button{
+  padding: 8px;
+  background-color: #335366;
+  border: none;
+  border-radius: 6px;
+  color: white;
+}
+.grid-view .left .accordian .items .flex .elem1 .circle{
+  height: 40px;
+  width: 40px;
+  border: 1px solid rgb(228, 17, 17);
+  border-radius: 50%;
+  color: red;
+  background-color: rgba(243, 148, 148, 0.5);
+}
+
+.grid-view .left .accordian .items .flex img{
+  height: 10px;
+}
+
+.grid-view .left .accordian .items .flex2{
+  display: flex;
+  gap: 6px;
+  text-align: center;
+  text-transform: uppercase;
+  line-height: 20px;
+} 
+.grid-view .left .accordian .items p {
+  text-align: center;
+}
+
+.grid-view .left .accordian .items hr{
+  opacity: 0.5;
+}
 /* Middle div */
 .grid-view .middle {
   display: flex;
@@ -342,20 +393,23 @@ html {
   position: relative;
 }
 
+/* Globe */
 .grid-view .middle .center .circle img{
   z-index: 1;
   height: 106%;
+  width: 117%;
   position: absolute;
   top: -53px;
   left: -55px;
+  opacity: 0.8;
 }
 
 .grid-view .middle .center .circle .earth{
   width: 90%;
   height: 90%;
   position: absolute;
-  left: 60px;
-  top: 40px;
+  left: 10%;
+  top: 9%;
 }
 /* Bar */
 .grid-view .right .bar {
